--- a/FileManagerOnline.Core/FileManagerOnline.Core.csproj
+++ b/FileManagerOnline.Core/FileManagerOnline.Core.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Query.cs" />
     <Compile Include="ConfigReader.cs" />
     <Compile Include="DirectoryInfoProcessor.cs" />
     <Compile Include="Interfaces\ICommandRunner.cs" />
