Test config generation has been added to unit tests. Implementation of some business logic classes.

--- a/FileManagerOnline.Core/FileManagerOnline.Core.csproj
+++ b/FileManagerOnline.Core/FileManagerOnline.Core.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Interfaces\IQueryParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CommandRunner.cs" />
+    <Compile Include="QueryProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
