--- a/ConfAsker.Core/ConfAsker.Core.csproj
+++ b/ConfAsker.Core/ConfAsker.Core.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{465B6EB7-3AB4-4E1A-A42C-D659B2BD1619}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FileManagerOnline.Core</RootNamespace>
-    <AssemblyName>FileManagerOnline.Core</AssemblyName>
+    <RootNamespace>ConfAsker.Core</RootNamespace>
+    <AssemblyName>ConfAsker.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IQueryValidator.cs" />
     <Compile Include="Query.cs" />
     <Compile Include="ConfigReader.cs" />
     <Compile Include="DirectoryInfoProcessor.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Interfaces\IQueryParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CommandRunner.cs" />
+    <Compile Include="QueryParser.cs" />
     <Compile Include="QueryProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
