--- a/ConfAsker.Tests/ConfAsker.Tests.csproj
+++ b/ConfAsker.Tests/ConfAsker.Tests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{C99F10FB-F74A-4A93-93AE-1CC9A058AE0E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FileManagerOnline.Tests</RootNamespace>
-    <AssemblyName>FileManagerOnline.Tests</AssemblyName>
+    <RootNamespace>ConfAsker.Tests</RootNamespace>
+    <AssemblyName>ConfAsker.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
