--- a/ConfAsker.Tests/ConfAsker.Tests.csproj
+++ b/ConfAsker.Tests/ConfAsker.Tests.csproj
@@ -53,6 +53,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="QueryParserTests.cs" />
     <Compile Include="UnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
