--- a/ConfAsker.Core/ConfAsker.Core.csproj
+++ b/ConfAsker.Core/ConfAsker.Core.csproj
@@ -47,6 +47,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
