start making a console application

--- a/ConfAsker.Tests/ConfAsker.Tests.csproj
+++ b/ConfAsker.Tests/ConfAsker.Tests.csproj
@@ -57,6 +57,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Helpers\FileSystemTestsHelper.cs" />
     <Compile Include="QueryParserTests.cs" />
     <Compile Include="QueryValidatorTests.cs" />
     <Compile Include="UnitTests.cs" />
