"check" command is ready. Todo: use double quotes instead of single in commands' syntax (it will make easier to work with console application args)

--- a/ConfAsker.Core/ConfAsker.Core.csproj
+++ b/ConfAsker.Core/ConfAsker.Core.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IDirectoryInfoProcessor.cs" />
     <Compile Include="Interfaces\IQueryValidator.cs" />
     <Compile Include="QueryProcessing\Query.cs" />
     <Compile Include="FileSystem\ConfigReader.cs" />
